--- a/firmware/_6key_encoder/_6key_encoder.vcxproj
+++ b/firmware/_6key_encoder/_6key_encoder.vcxproj
@@ -87,4 +87,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties arduino.upload.port="COM10" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
